# oswo

./: CHANGELOG.md  Cargo.toml  README.md  cfgs.toml
.github/workflows/: rust.yml
src/: cfg.rs  daemon.rs  lib.rs  main.rs  outputs.rs  show.rs
