[package]
name = "oswo"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = [ "derive" ] }
color-eyre = "0.6.2"
dirs = "5"
serde = "1.0.159"
swayipc = "3.0.1"
toml_edit = { version = "0.21.0", features = [ "serde" ] }
