[package]
name = "oswo"
version = "1.1.1"
edition = "2021"
description = "Organize your sway outputs"
repository = "https://github.com/kuabem/oswo"
homepage = "https://github.com/kuabem/oswo"
license = "MIT"

[dependencies]
clap = { version = "4.1.13", features = [ "derive" ] }
color-eyre = "0.6.2"
dirs = "5"
serde = "1.0.159"
swayipc = "3.0.1"
toml_edit = { version = "0.21.0", features = [ "serde" ] }
